# TlsDecorator

./: CMakeLists.txt  README.md
include/TlsDecorator/: TlsDecorator.hpp  TlsShim.hpp
src/: TlsDecorator.cpp  TlsShim.cpp
test/: CMakeLists.txt
test/src/: TlsDecoratorTests.cpp
